# BaluLib

./: BaluLib.sln  BaluLib.vcxproj  BaluLib.vcxproj.filters  CMakeLists.txt  README.md  appveyor.yml  readme.txt
Example/: CMakeLists.txt  Example.vcxproj  Test.cpp
Examples/Test/: Test.cpp
Include/: baluLib.h  export.h  utf8.h
Source/: arrays.h  bVolumes.h  camera.cpp  camera.h  common.cpp  common.h  fixed.h  growableStack.h  matrix.h  primitives.h  quaternion.h  stdfuncs.h  vec.h
Source/BVolumes/: AABB.h  BVolume.h  Capsule.h  Frustum.h  OBB.h  Sphere.h
Source/Collisions/: AABBAndAABB.h  AABBAndSphere.h  CapsuleAndAABB.h  CapsuleAndCapsule.h  CapsuleAndOBB.h  CapsuleAndSphere.h  OBBAndAABB.h  OBBAndOBB.h  OBBAndSphere.h  SphereAndSphere.h
Source/Collisions/Common/: AABB.cpp  AABB.h  Capsule.cpp  Capsule.h  Frustum.cpp  OBB.cpp  OBB.h  Sphere.cpp  Sphere.h
Source/Math/: fixed.h  matrix.h  quaternion.h  vec.h
Source/Trees/: aabbTree.cpp  aabbTree.h  kdtree.h  octree.h  quadtree.h
